前端初步实现，后端部分bug修复